Remove 100vw to prevent overflow

--- a/src/css/02-base/_layout.scss
+++ b/src/css/02-base/_layout.scss
@@ -4,7 +4,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  width: 100vw;
+  width: 100%;
 
   @media (min-width: $lg) {
     &::before {
